--- a/ex2.32.dom.html
+++ b/ex2.32.dom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dom ex2</title>
+    <title>dom 실습 2</title>
     <script defer src="ex2.32.dom.js"></script>
 </head>
 <body>
